[gd_scene load_steps=10 format=3 uid="uid://dhc45ew2mfqbu"]

[ext_resource type="Script" path="res://game/main_scene.gd" id="1_2p4ut"]
[ext_resource type="PackedScene" uid="uid://bb8yvsx0g14vl" path="res://src/line_reader.tscn" id="1_y64f0"]
[ext_resource type="PackedScene" uid="uid://c67ti8jynl2ey" path="res://game/game.tscn" id="2_opnta"]
[ext_resource type="PackedScene" uid="uid://bo3vwa8qi2bm8" path="res://game/main_menu.tscn" id="3_b52at"]
[ext_resource type="Script" path="res://src/InstructionHandlerInherit.gd" id="4_axwkl"]
[ext_resource type="PackedScene" uid="uid://r0tb7qevdcwr" path="res://game/black.tscn" id="4_ut3ne"]
[ext_resource type="PackedScene" uid="uid://bu33mw8t7dsk8" path="res://game/pause_menu.tscn" id="4_vd1ov"]
[ext_resource type="PackedScene" uid="uid://cd30e6wacwrav" path="res://game/game_finished.tscn" id="6_ltep6"]
[ext_resource type="PackedScene" uid="uid://tgquth0l2fsr" path="res://game/zero_hud.tscn" id="9_vdyrl"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2p4ut")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1440, 900)
render_target_update_mode = 4

[node name="Game" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_opnta")]

[node name="LineReader" parent="." instance=ExtResource("1_y64f0")]
property_for_name = "character"
name_for_blank_name = "narrator"
auto_pause_duration = 0.4
name_map = {
"euphoria": "Euphoria",
"oldrone": "Oldrone",
"zero": "Zero",
"zero+euphoria": "Zero & Euphoria"
}
show_advance_available = false

[node name="Black" parent="LineReader" instance=ExtResource("4_ut3ne")]
visible = false

[node name="InstructionHandler" type="Node" parent="LineReader"]
script = ExtResource("4_axwkl")

[node name="GameFinished" parent="." instance=ExtResource("6_ltep6")]

[node name="MainMenu" parent="." instance=ExtResource("3_b52at")]

[node name="PauseMenu" parent="." instance=ExtResource("4_vd1ov")]
visible = false

[node name="ZeroHUD" parent="." instance=ExtResource("9_vdyrl")]

[connection signal="instruction_completed" from="LineReader/Black" to="LineReader/InstructionHandler" method="_on_black_instruction_completed"]
[connection signal="make_screen_black" from="LineReader/InstructionHandler" to="LineReader/Black" method="_on_instruction_handler_make_screen_black"]
[connection signal="request_main_menu" from="GameFinished" to="." method="_on_game_finished_request_main_menu"]
[connection signal="request_show_options" from="MainMenu" to="." method="_on_main_menu_request_show_options"]
[connection signal="request_main_menu" from="PauseMenu" to="." method="_on_pause_menu_request_main_menu"]
